# inno-trackify

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: lint.yml
backend/app/: config.py  database.py  main.py  models.py
backend/app/api/: activities.py  authentication.py  healthz.py  users.py
backend/app/crud/: activities.py  authentication.py  users.py
backend/app/schemas/: activities.py  authentication.py  users.py
backend/tests/: test_activities.py  test_authentication.py  test_users.py
backend/tests/api/: test_activities.py  test_authentication.py  test_users.py
backend/tests/crud/: test_activities.py  test_authentication.py  test_users.py
frontend/: 1_🏠_Home.py  2_⏰_Timer Backup.py  app.py  config.py
frontend/pages/: 2_⏰_Timer.py  3_📋_Activities.py  4_➕_Add activity.py
frontend/utils/: functions.py
inno-trackify/: pyproject.toml
inno-trackify/frontend/: app.py
main/reports/flake8/: index.html
main/reports/pytest/: coverage.xml  pytestreport.html  pyteststats.txt
main/reports/pytest/coverage/: class_index.html  function_index.html  index.html  status.json  z_9f792f59402a9e2b___init___py.html  z_9f792f59402a9e2b_activities_py.html  z_9f792f59402a9e2b_authentication_py.html  z_9f792f59402a9e2b_users_py.html  z_b2177b27918a49d1___init___py.html  z_b2177b27918a49d1_activities_py.html  z_b2177b27918a49d1_authentication_py.html  z_b2177b27918a49d1_users_py.html  z_cd756cf0ef5e98d0___init___py.html  (+9 more)
migrations/: init.sql
