[tool.poetry]
name = "inno-trackify"
version = "0.1.0"
description = ""
authors = ["Arseniy <arseniy_zd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
pydantic = "^1.9.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.31"
streamlit = "^1.6.0"
python-multipart = "^0.0.9"
flake8 = "^7.0.0"
black = "^24.3.0"
genbadge = "^1.1.1"
flake8-html = "^0.4.3"
pytest-cov = "^5.0.0"
python-jose = "^3.3.0"
pytest-html = "^4.1.1"
defusedxml = "^0.7.1"
bandit = "^1.7.8"
psycopg2-binary = "^2.9.9"

[tool.poetry.dev-dependencies]
pytest = "^7.2.5"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"