[tool.poetry]
name = "inno-trackify"
version = "0.1.0"
description = ""
authors = ["Arseniy <arseniy_zd@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.68.0"
pydantic = "^1.9.0"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.31"
streamlit = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"